[gd_scene load_steps=4 format=3 uid="uid://d3uce38en0ui4"]

[ext_resource type="Texture2D" uid="uid://cxxfhpe418e7g" path="res://PlaceholderSprites/grill-png-16.png" id="1_i4jsk"]
[ext_resource type="Script" path="res://Interactives/BBQ.gd" id="1_rsa00"]
[ext_resource type="PackedScene" uid="uid://dvv5nlyq1crgg" path="res://Interactives/InteractivePrompt.tscn" id="2_nhwhn"]

[node name="Bbq" type="Node2D"]
script = ExtResource("1_rsa00")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.655, 0.1)
texture = ExtResource("1_i4jsk")

[node name="LeftPrompt" parent="." instance=ExtResource("2_nhwhn")]
offset_left = -69.0
offset_top = -17.0
offset_right = -69.0
offset_bottom = -17.0

[node name="Label" parent="LeftPrompt" index="1"]
text = "Cook"

[node name="FoodMarker" type="Marker2D" parent="LeftPrompt"]

[node name="MiddlePrompt" parent="." instance=ExtResource("2_nhwhn")]
offset_left = -9.0
offset_top = -17.0
offset_right = -9.0
offset_bottom = -17.0

[node name="Label" parent="MiddlePrompt" index="1"]
text = "Cook"

[node name="FoodMarker" type="Marker2D" parent="MiddlePrompt"]

[node name="RightPrompt" parent="." instance=ExtResource("2_nhwhn")]
offset_left = 51.0
offset_top = -17.0
offset_right = 51.0
offset_bottom = -17.0

[node name="Label" parent="RightPrompt" index="1"]
text = "Cook"

[node name="FoodMarker" type="Marker2D" parent="RightPrompt"]

[connection signal="interacted" from="LeftPrompt" to="." method="_on_left_prompt_interacted"]
[connection signal="interacted" from="MiddlePrompt" to="." method="_on_middle_prompt_interacted"]
[connection signal="interacted" from="RightPrompt" to="." method="_on_right_prompt_interacted"]

[editable path="LeftPrompt"]
[editable path="MiddlePrompt"]
[editable path="RightPrompt"]
